# templaters

./: .vimspector.json  Cargo.toml  Makefile  do.sh
.github/workflows/: pipeline.yml  release.yml
docs/: README.md
docs/wiki/: book.toml
docs/wiki/docker/: Dockerfile
docs/wiki/src/: home.md
docs/wiki/src/introduction/: installation.md  reference.md  root.md  security.md
docs/wiki/src/todos/: root.md
pkg/aur/: PKGBUILD
src/: args.rs  commands.rs  error.rs  lib.rs  main.rs
